Align center on demo, fix alignment on emoji group title

--- a/css/emoji-button.css
+++ b/css/emoji-button.css
@@ -87,6 +87,7 @@
   font-size: 0.85rem;
   color: #333333;
   margin: 0;
+  text-align: left;
 }
 
 .emoji-picker__tab-body.active {
