--- a/examples/public/style.css
+++ b/examples/public/style.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  text-align: center;
 }
 
 #emoji-button {
@@ -29,4 +30,5 @@ body {
   font-size: 1rem;
   height: 1rem;
   padding-right: 2rem;
+  width: 20rem;
 }
